# fsmlite

./: .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  LICENSE  Makefile.am  README.md  SUPPORT.md  autogen.sh  configure.ac
.github/: SECURITY.md
.github/workflows/: ci.yml
cmake/: fsmliteConfig.cmake.in
cmake/modules/: Install.cmake
cmake/toolchains/: arm-none-eabi.cmake
docs/: .gitignore  Doxyfile  Makefile.am  conf.py  index.rst  requirements.txt
m4/: ax_cxx_compile_stdcxx.m4
src/: Makefile.am  fsm.h  fsm.hpp  fsmlite.h
tests/: .gitignore  CMakeLists.txt  Makefile.am  test_basic_row.cpp  test_guards.cpp  test_mem_fn_row.cpp  test_notrans.cpp  test_player.cpp  test_player_mem_fn.cpp  test_recursive.cpp  test_row.cpp  test_rows.cpp  test_scoped.cpp  test_shared.cpp  test_traits.cpp  test_typed_row.cpp
