# Process this file with automake to produce Makefile.in
AM_CPPFLAGS = -I$(top_srcdir)/src

check_PROGRAMS = test_player test_guards test_notrans test_scoped	\
test_rows test_traits

test_player_SOURCES = test_player.cpp

test_guards_SOURCES = test_guards.cpp

test_notrans_SOURCES = test_notrans.cpp

test_scoped_SOURCES = test_scoped.cpp

test_rows_SOURCES = test_rows.cpp

test_traits_SOURCES = test_traits.cpp

TESTS = $(check_PROGRAMS)
